--- a/package.json
+++ b/package.json
@@ -6,10 +6,12 @@
   "scripts": {
     "start:build": "tsc -w",
     "start:run": "nodemon build/app.js",
-    "start": "concurrently npm:start:*",
-    "build": "tsc"
+    "start": "concurrently npm:start:*"
   },
   "keywords": [],
   "author": "",
-  "license": "ISC"
+  "license": "ISC",
+  "devDependencies": {
+    "ts-node": "^10.9.1"
+  }
 }
