--- a/package.json
+++ b/package.json
@@ -12,6 +12,11 @@
   "author": "",
   "license": "ISC",
   "devDependencies": {
+    "concurrently": "^8.2.2",
+    "nodemon": "^3.0.2",
     "ts-node": "^10.9.1"
+  },
+  "dependencies": {
+    "rxjs": "^7.8.1"
   }
 }
